- enabled CEGUI's lua script module - Filebrowser enhanced and changed LuaScriptTab in the DebugPanel to use it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,6 +232,7 @@ SET(LINK_LIBS
 	${OIS_LIBRARIES} 
 	${CEGUI_LIBRARY} 
 	${CEGUIOGRE_LIBRARY} 
+	${CEGUILUA_LIBRARY}
 	${LUA_LIBRARIES} 
 	${OPENAL_LIBRARY} 
 	${ALUT_LIBRARY} 
