- added POCO as a dependency when build with tools (DebugPanel, FileBrowser...) - changed the FileBrowser to use Poco::FileSystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,12 @@
 cmake_minimum_required(VERSION 2.6)
 
 
+OPTION(NO_TINYXML "Avoid use of TinyXML Lib" OFF)
+OPTION(BUILD_TOOLS "Builds editor tools" OFF)
+
 IF( NOT CMAKE_BUILD_TYPE )
 SET( CMAKE_BUILD_TYPE "RelWithDebInfo" )
 ENDIF()
-
-OPTION(NO_TINYXML "Avoid use of TinyXML Lib" OFF)
-OPTION(BUILD_TOOLS "Builds editor tools" OFF)
 
 PROJECT(SUMWARS)
 
@@ -32,8 +32,6 @@ SET(VERSION_MAJOR "0")
 SET(VERSION_MINOR "6")
 SET(VERSION_PATCH "0")
 SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
-
-
 	
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
 
@@ -70,6 +68,11 @@ FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 
+IF(BUILD_TOOLS)
+FIND_PACKAGE(POCO REQUIRED)
+ENDIF()
+
+
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/enet/include)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tinyxml)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/core)
@@ -87,6 +90,7 @@ INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
 IF(BUILD_TOOLS)
 	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/debugpanel)
 	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/debugpanel/filebrowser)
+	INCLUDE_DIRECTORIES(${POCO_INCLUDE_DIR})
 ENDIF()
 
 
@@ -240,7 +244,14 @@ SET(LINK_LIBS
 	${VORBIS_LIBRARIES} 
 )
 
-MESSAGE(${LINK_LIBS})
+IF(BUILD_TOOLS)
+SET(LINK_LIBS
+	${LINK_LIBS}
+	${POCO_LIBRARIES}
+	)
+
+ADD_DEFINITIONS(-DBUILD_TOOLS)
+ENDIF()
 
 IF(WIN32)
 	SET(LINK_LIBS
