- temporarily disabled CEGUI's lua scripting system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,12 +230,13 @@ ENDIF()
 
 ADD_EXECUTABLE(sumwars ${SRCS})
 
+#${CEGUILUA_LIBRARY}
+
 SET(LINK_LIBS
 	${OGRE_LIBRARIES} 
 	${OIS_LIBRARIES} 
 	${CEGUI_LIBRARY} 
-	${CEGUIOGRE_LIBRARY} 
-	${CEGUILUA_LIBRARY}
+	${CEGUIOGRE_LIBRARY}
 	${LUA_LIBRARIES} 
 	${OPENAL_LIBRARY} 
 	${ALUT_LIBRARY} 
