- added mine meshes from Psycho

--- a/resources.cfg
+++ b/resources.cfg
@@ -1,5 +1,6 @@
 [General]
-FileSystem=./resources/models
+FileSystem=./resources/models/
+FileSystem=./resources/models/mine
 FileSystem=./resources/models/veg
 FileSystem=./resources/materials/scripts
 FileSystem=./resources/materials/programs
