ContentEditor: Insertion of fixed objects implemented. Conversion Data->XML complete Conversion XML->Data still missing size computation buggy when creating different objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,7 @@ SET(SRCS
   ./src/core/debug.cpp
   ./src/core/unionfindtree.cpp
   ./src/core/world.cpp
+  ./src/core/fixedbase.cpp
   ./src/core/fixedobject.cpp
   ./src/core/templateloader.cpp
   ./src/core/elementattrib.cpp
