New Inventory graphics from hiponboy, and a slight redesign

--- a/resources.cfg
+++ b/resources.cfg
@@ -16,6 +16,7 @@ FileSystem=./resources/gui/imagesets
 FileSystem=./resources/gui/layouts
 FileSystem=./resources/gui/looknfeel
 FileSystem=./resources/gui/schemes
+FileSystem=./resources/gui/animations
 
 [emotionsets]
 FileSystem=./resources/emotionsets
