- CMake generates a version.h file now on configure time - Version currently running is displayed in the lower left corner of the main menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,26 @@ PROJECT(SUMWARS)
 
 project(sumwars)
 
-SET(VERSION_MAJOR "0")
-SET(VERSION_MINOR "6")
-SET(VERSION_PATCH "0")
-SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
-	
+FIND_PACKAGE(Subversion)
+IF(Subversion_FOUND)
+    #Use the FindSubversion.cmake module to get the svn rev and appendthat to the patch version.
+    Subversion_WC_INFO(${PROJECT_SOURCE_DIR} Project)
+    MESSAGE("Current revision is ${Project_WC_REVISION}")
+    Subversion_WC_LOG(${PROJECT_SOURCE_DIR} Project)
+ELSE(Subversion_FOUND)
+    SET(Project_WC_REVISION "unknown")
+ENDIF(Subversion_FOUND)
+
+SET(${PROJECT_NAME}_VERSION_MAJOR "0")
+SET(${PROJECT_NAME}_VERSION_MINOR "5")
+SET(${PROJECT_NAME}_VERSION_PATCH "5")
+SET(${PROJECT_NAME}_VERSION_REVISION ${Project_WC_REVISION})
+SET(${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}.${${PROJECT_NAME}_VERSION_REVISION}")
+MESSAGE(${${PROJECT_NAME}_VERSION})
+
+CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/src/gui/version.h.in"
+"${PROJECT_SOURCE_DIR}/src/gui/version.h" )
+
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")
 
 IF(WIN32)
@@ -123,6 +138,8 @@ SET(SRCS_TINYXML
 IF(NO_TINYXML)
   SET(SRCS_TINYXML "")
 ENDIF()
+
+
 
 SET(HEADER_FILES
   ./src/core/nlfg.h
