Updating some stuff in the Debian directory, hopefully this time we're more lucky and get to create a package

--- a/debian/control
+++ b/debian/control
@@ -3,16 +3,16 @@ Section: games
 Priority: extra
 Maintainer: Manuel A. Fernandez Montecelo <manuel.montezelo@gmail.com>
 DM-Upload-Allowed: yes
-Build-Depends: debhelper (>= 7.0.0), cmake (>> 2.6), pkg-config, libalut-dev, libopenal-dev, libvorbis-dev, libenet-dev, libogre-dev, libois-dev, libcegui-mk2-dev, liblua5.1-0-dev, libceguiogre-dev
-Standards-Version: 3.9.1
+Build-Depends: debhelper (>= 8.0.0), cmake (>> 2.6), pkg-config, libalut-dev, libopenal-dev, libvorbis-dev, libenet-dev, libogre-dev (>= 1.7.0), libois-dev, libcegui-mk2-dev (>= 0.7.0), liblua5.1-0-dev, libpoco-dev (>= 1.3), libphysfs-dev (>= 2.0)
+Standards-Version: 3.9.2
 Homepage: http://www.sumwars.org/
 Vcs-Svn: http://sumwars.svn.sourceforge.net/svnroot/sumwars/trunk
 Vcs-Browser: http://sumwars.svn.sourceforge.net/viewvc/sumwars/
 
-Package: sumwars-bin
+Package: sumwars
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}, sumwars-data (= ${source:Version})
-Description: Summoning Wars is a role-playing game, binary files
+Description: Summoning Wars action role-playing game, binary files
  Summoning Wars is an open source role-playing game, featuring both a
  single-player and a multiplayer mode for about 2 to 8 players.
  .
@@ -21,7 +21,8 @@ Description: Summoning Wars is a role-playing game, binary files
 Package: sumwars-data
 Architecture: all
 Depends: ${misc:Depends}
-Description: Summoning Wars is a role-playing game, data files
+Recommends: sumwars (= ${source:Version})
+Description: Summoning Wars action role-playing game, data files
  Summoning Wars is an open source role-playing game, featuring both a
  single-player and a multiplayer mode for about 2 to 8 players.
  .
