--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,4 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -29,6 +27,8 @@ build-stamp:
 	cd build && \
 	cmake   -D CMAKE_INSTALL_PREFIX:PATH=/usr \
 		-D CMAKE_CXX_FLAGS=$(CXXFLAGS) \
+		-D NO_TINYXML:BOOL=ON \
+		-D BUILD_TOOLS:BOOL=OFF \
 		.. && \
 	$(MAKE) $(PARALLEL_OPTIONS)
 
