Tinyxml (which in-source copy way quite out-of-date, by the way) currently cannot really be disabled, despite the NO_TINYXML option being there.  This is because of the 'local' includes with quotes instead of <tinyxml.h> and the missing indication in CMakeLists.txt to link the system's provided tinyxml library, which this commit attemps to fix.  This change is part of the preparation of packages for Debian/Ubuntu, but it will probably benefit others.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,12 +75,11 @@ SET(CMAKE_DEBUG_POSTFIX "_d")
 
 SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/dist")
 
+
 FIND_PACKAGE(OGRE REQUIRED)
- 
 IF(NOT "${OGRE_VERSION_NAME}" STREQUAL "Cthugha")
   MESSAGE(SEND_ERROR "You need Ogre 1.7 Cthugha to build this.")
 ENDIF()
-
 FIND_PACKAGE(OIS REQUIRED)
 FIND_PACKAGE(Lua51 REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
@@ -90,14 +89,20 @@ FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(PhysFS REQUIRED)
-
 IF(BUILD_TOOLS)
-FIND_PACKAGE(POCO REQUIRED)
+  FIND_PACKAGE(POCO REQUIRED)
+ENDIF()
+IF(NO_TINYXML)
+  FIND_PACKAGE(TinyXML REQUIRED)
 ENDIF()
 
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/enet/include)
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tinyxml)
+IF(NO_TINYXML)
+  INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
+ELSE()
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/tinyxml)
+ENDIF()
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/core)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/contenteditor)
@@ -135,13 +140,14 @@ ENDIF()
 
 MESSAGE(${CMAKE_BUILD_TYPE})
 
-SET(SRCS_TINYXML
-  ./src/tinyxml/tinystr.cpp
-  ./src/tinyxml/tinyxmlerror.cpp
-  ./src/tinyxml/tinyxml.cpp
-  ./src/tinyxml/tinyxmlparser.cpp)
 IF(NO_TINYXML)
   SET(SRCS_TINYXML "")
+ELSE()
+  SET(SRCS_TINYXML
+    ./src/tinyxml/tinystr.cpp
+    ./src/tinyxml/tinyxmlerror.cpp
+    ./src/tinyxml/tinyxml.cpp
+    ./src/tinyxml/tinyxmlparser.cpp)
 ENDIF()
 
 
@@ -399,6 +405,10 @@ SET(LINK_LIBS
 	${VORBIS_LIBRARIES} 
 	${PHYSFS_LIBRARY}
 )
+
+IF(NO_TINYXML)
+  SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARY})
+ENDIF()
 
 IF(BUILD_TOOLS)
 SET(LINK_LIBS
