Using the right variable to link to TinyXML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -407,7 +407,7 @@ SET(LINK_LIBS
 )
 
 IF(NO_TINYXML)
-  SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARY})
+  SET(LINK_LIBS ${LINK_LIBS} ${TINYXML_LIBRARIES})
 ENDIF()
 
 IF(BUILD_TOOLS)
