--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: games
 Priority: extra
 Maintainer: Manuel A. Fernandez Montecelo <manuel.montezelo@gmail.com>
 DM-Upload-Allowed: yes
-Build-Depends: debhelper (>= 8.0.0), cmake (>> 2.6), pkg-config, libalut-dev, libopenal-dev, libvorbis-dev, libenet-dev, libogre-dev (>= 1.7.0), libois-dev, libcegui-mk2-dev (>= 0.7.0), liblua5.1-0-dev, libpoco-dev (>= 1.3), libphysfs-dev (>= 2.0)
+Build-Depends: debhelper (>= 8.0.0), cmake (>= 2.6), libphysfs-dev (>= 2.0), libtinyxml-dev (>= 2.6), libalut-dev, libopenal-dev, libvorbis-dev, libenet-dev, libogre-dev (>= 1.7.0), libois-dev, libcegui-mk2-dev (>= 0.7.0), liblua5.1-0-dev
 Standards-Version: 3.9.2
 Homepage: http://www.sumwars.org/
 Vcs-Svn: http://sumwars.svn.sourceforge.net/svnroot/sumwars/trunk
