Disable in-source enet library when building .deb packages, thus forcibly requiring the system's one

--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,7 @@ build-stamp:
 		-D CMAKE_BUILD_TYPE:STRING="Release" \
 		-D CMAKE_CXX_FLAGS=$(CXXFLAGS) \
 		-D NO_TINYXML:BOOL=ON \
+		-D NO_ENET:BOOL=ON \
 		-D BUILD_TOOLS:BOOL=OFF \
 		.. && \
 	$(MAKE) $(PARALLEL_OPTIONS)
