Defile full path of icon in the .desktop file, otherwise it doesn't seem to find the proper file

--- a/packaging/sumwars.desktop
+++ b/packaging/sumwars.desktop
@@ -6,6 +6,6 @@ GenericName=Summoning Wars
 Comment=A multi-player, 3D Action Role-Playing Game
 TryExec=/usr/games/sumwars
 Exec=/usr/games/sumwars
-Categories=Game;RolePlaying
-Icon=/usr/games/share/sumwars/sumwars-icon.png
+Categories=Game;RolePlaying;
+Icon=/usr/share/icons/hicolor/128x128/sumwars.png
 Terminal=false
