CMake: Reverted some previous changes for inter-developer compatibility :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,10 +70,10 @@ IF(NOT "${OGRE_VERSION_NAME}" STREQUAL "Cthugha")
   MESSAGE(SEND_ERROR "You need Ogre 1.7 Cthugha to build this.")
 ENDIF()
 
-IF (WIN32)
-  FIND_PACKAGE(BOOST REQUIRED)
-  FIND_PACKAGE(GNUWIN REQUIRED)
-ENDIF (WIN32)
+#IF (WIN32)
+#  FIND_PACKAGE(BOOST REQUIRED)
+#  FIND_PACKAGE(GNUWIN REQUIRED)
+#ENDIF (WIN32)
 FIND_PACKAGE(OIS REQUIRED)
 FIND_PACKAGE(Lua51 REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
@@ -98,9 +98,9 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/core)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/gui/contenteditor)
 INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
-IF (WIN32)
-  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-ENDIF (WIN32)
+#IF (WIN32)
+#  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+#ENDIF (WIN32)
 INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${CEGUI_INCLUDE_DIR})
@@ -418,13 +418,13 @@ ENDIF (WIN32)
 ADD_EXECUTABLE(sumwars ${SRCS})
 
 # Only after adding the executable can a link be made to boost
-IF (WIN32)
-  include_directories(${Boost_INCLUDE_DIRS})
-  link_directories(${Boost_LIBRARY_DIRS})
-  include_directories(${GNUWIN_INCLUDE_DIR})
-
-  message("Adding boost include: ${Boost_INCLUDE_DIRS}")
-ENDIF (WIN32)
+#IF (WIN32)
+#  include_directories(${Boost_INCLUDE_DIRS})
+#  link_directories(${Boost_LIBRARY_DIRS})
+#  include_directories(${GNUWIN_INCLUDE_DIR})
+#
+#  message("Adding boost include: ${Boost_INCLUDE_DIRS}")
+#ENDIF (WIN32)
 
 #${CEGUILUA_LIBRARY}
 
@@ -438,7 +438,8 @@ SET(LINK_LIBS
   ${LUA_LIBRARIES} 
   ${OPENAL_LIBRARY} 
   ${ALUT_LIBRARY} 
-  ${OGG_LIBRARY}
+  ${OGG_LIBRARY_DEBUG}
+#  ${OGG_LIBRARY}
   ${VORBIS_LIBRARIES} 
   ${PHYSFS_LIBRARY}
   )
