Correcting D3D->OpenGL comment

--- a/plugins.cfg
+++ b/plugins.cfg
@@ -3,7 +3,7 @@
 # Define plugin folder
 PluginFolder=/usr/lib/OGRE
 
-# Define D3D rendering implementation plugin
+# Define OpenGL rendering implementation plugin
 Plugin=RenderSystem_GL.so
 Plugin=Plugin_ParticleFX.so
 Plugin=Plugin_BSPSceneManager.so
