--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -11,12 +11,12 @@ Vcs-Browser: http://sumwars.svn.sourceforge.net/viewvc/sumwars/
 
 Package: sumwars
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, sumwars-data (= ${source:Version})
+Depends: ${misc:Depends}, ${shlibs:Depends}, sumwars-data (= ${source:Version}), ttf-dejavu-core (>= 2.33)
 Description: Summoning Wars action role-playing game, binary files
  Summoning Wars is an open source role-playing game, featuring both a
  single-player and a multiplayer mode for about 2 to 8 players.
  .
- This package contains binaries and libraries.
+ This package contains the binary.
 
 Package: sumwars-data
 Architecture: all
