Add quotes in the C++ file, remove it from the CMakeLists.txt file, so we have the desired results without interfering with the rest of the installation process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ IF(WIN32)
 ENDIF()
 
 if(UNIX)
-  set(CFG_FILES_DIR "\"${CMAKE_INSTALL_PREFIX}/share/games/sumwars/\"")
+  set(CFG_FILES_DIR "${CMAKE_INSTALL_PREFIX}/share/games/sumwars/")
 else()
   set(CFG_FILES_DIR "./")
 endif()
