--- a/src/gui/config.h.in
+++ b/src/gui/config.h.in
@@ -3,6 +3,6 @@
 
 // Generated file, do not edit!  Make changes to config.h.in instead.
 
-#define CFG_FILES_DIR @CFG_FILES_DIR@
+#define CFG_FILES_DIR "@CFG_FILES_DIR@"
 
 #endif
